<resources>
    <string name="app_name">HSU Appointments</string>
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Activity</string>
    <string name="title_new_appointment">New Appointment</string>
    <string name="title_activity_prescriptions">Prescriptions</string>
    <string name="title_activity_my_medical_records">My Record</string>
    <string name="title_activity_view_appointments">View Appointments</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="registrationSignUp">Registration</string>
    <string name="id_numberSignUp">ID Number</string>
    <string name="firstNameSignUp">First Name</string>
    <string name="lastNameSignUp">Last Name</string>
    <string name="passwordSignUp">Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="loginLogin">Login</string>
    <string name="id_numberLogin">ID Number</string>
    <string name="passwordLogin">Password</string>
    <string name="loginButton">Login</string>
    <string name="mainLogOut">Log Out</string>
    <string name="select_date_hint">Select Date</string>
    <string name="createAppSubmit">Submit</string>
    <string name="need_an_account_sign_up">Need an account? Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="condition_description">Condition Description...</string>
    <string name="create_appointment_test">Create Appointment</string>

    <string-array name="select_appt_type_array">
        <item>Choose an appointment type</item>
        <item>Physical Injuries</item>
        <item>Sexual Health</item>
        <item>Dietetics</item>
        <item>Psychiatrics</item>
        <item>General Conditions</item>
    </string-array>

    <string name="title_activity_user_settings">User Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Application</string>
    <string name="sync_header">Account</string>

    <!-- Application Preferences -->
    <string name="chat_title">Chat</string>
    <string name="notification_title">Notifications</string>
    <string name="theme_title">Theme</string>
    <string name="units_title">Measuring Units</string>

    <!-- Account Preferences -->
    <string name="chng_pw">Change Password</string>
    <string name="attachment_title">Export Data</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>