<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/ic_home">

    <fragment
        android:id="@+id/ic_home"
        android:name="com.example.HSUAppProject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/ic_notification"
        android:name="com.example.HSUAppProject.ui.dashboard.SelectTypeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/addappt"
        android:name="com.example.HSUAppProject.ui.notifications.NotificationsFragment"
        android:label="@string/title_new_appointment"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/ic_prescription"
        android:name="com.example.HSUAppProject.ui.notifications.NotificationsFragment"
        android:label="@string/title_activity_prescriptions"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/ic_medrecord"
        android:name="com.example.HSUAppProject.ui.notifications.NotificationsFragment"
        android:label="@string/title_activity_my_medical_records"
        tools:layout="@layout/fragment_notifications" />


</navigation>