<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleSignUp"
        android:layout_width="261dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/registrationSignUp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signUpID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/id_numberSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignUp">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signUpFirstName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:hint="@string/firstNameSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpID" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signUpLastName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:hint="@string/lastNameSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signUpPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:hint="@string/passwordSignUp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastName" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

    <Button
        android:id="@+id/goToLogin"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/black"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>