<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#51C1B1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleLogin"
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/loginLogin"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginID"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/txt_signin"
        android:hint="@string/id_numberLogin"
        android:padding="15dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/txt_signin"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginID" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/bg_bttn"

        android:text="@string/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:id="@+id/goToSignUp"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/need_an_account_sign_up"
        android:background="#00000000"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>